# PiSSM

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance.md
docs/: Proposal.md  SRS.md  Summer_Sprint.md  tests.md
inference/: loader.py  manifest.py  model_registry.py  service.py  shard.py  tensor_utils.py
manifests/: mamba-130m.yaml
notebooks/: pipeline_comparison.ipynb  single_node_profiling.ipynb
orchestrator/: config.py  dispatch.py  model_store.py  node_registry.py  pipeline.py  server.py  service.py  worker_client.py
proto/: inference.proto  nodes.proto
scripts/: benchmark_network.py  generate_proto.sh  profile_pipeline.py  profile_single_node.py  run_pipeline.py
tests/: conftest.py
tests/integration/: test_failure_detection.py  test_heartbeat_flow.py  test_inference_flow.py  test_model_loading.py
tests/unit/: test_dispatch.py  test_heartbeat_client.py  test_heartbeat_service.py  test_inference_service.py  test_loader.py  test_manifest.py  test_model_registry.py  test_node_registry.py  test_pipeline.py  test_shard.py  test_system_info.py  test_tensor_utils.py  test_worker_client.py
worker/: daemon.py  heartbeat.py  system_info.py
