[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pissm"
version = "0.1.0"
description = "Distributed SSM inference on Raspberry Pi cluster"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "grpcio-testing>=1.62.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
pissm-orchestrator = "orchestrator.server:main"
pissm-worker = "worker.daemon:main"

[tool.setuptools.packages.find]
include = ["orchestrator*", "worker*", "proto*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"
